--- a/main/index.html
+++ b/main/index.html
@@ -6,6 +6,11 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
+  <!--Google Font-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css"/>
   
   <title>Frontend Mentor | QR code component</title>
@@ -14,22 +19,15 @@
 <body>
   <div class="main">
     <div class="secondary">
-      <div class="QR">
-        <img src="images/image-qr-code.png"/>
+        <img src="images/image-qr-code.png" class="QR"/>
         <h1>Improve your front-end skills by building projects</h1>
         <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-      </div>
     </div>
   </div>
-  
-
-  
-
-  
-  
-  <!-- <div class="attribution">
+    
+  <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+    Coded by <a href="#">Jorge Martinez</a>.
+  </div>
 </body>
 </html>
